--- a/src/components/Common/Input/styles.css
+++ b/src/components/Common/Input/styles.css
@@ -3,13 +3,18 @@
     font-size: .8rem;
     color: white;
     font-weight: 500;
-    margin-top: 50px;
     padding: 10px 0px;
     padding-left: 15px;
     border-radius: 3px;
     margin-right: 30px;
     background: #5C5C5C;
     outline: none;
+}
+
+.wrapper {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .input::placeholder {
@@ -22,4 +27,17 @@
     background: #C620A7;
     padding: 7px 50px;
     border-radius: 3px;
+}
+
+@media (max-width: 600px) {
+    .input {
+        width: 100%;
+        margin-bottom: 20px;
+        margin-right: 0px;
+    }
+
+    .wrapper {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
