--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -14,6 +14,11 @@
     margin-bottom: 25px;
 }
 
+.loading {
+    display: flex;
+    justify-content: center;
+}
+
 @media (max-width: 600px) {
     .todos {
         padding: 20px;
